// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginPanel tests should render correctly 1`] = `
<div>
  <withRouter(Connect(LoginRedirect)) />
  <CenteredLogo />
  <Panel
    accent={true}
    sectioned={true}
    title="panel tests"
  >
    <Connect(ReduxForm)
      onSubmit={[MockFunction]}
      ssoEnabled={true}
    />
  </Panel>
</div>
`;

exports[`LoginPanel tests should show error component when loginError exists 1`] = `
<div>
  <withRouter(Connect(LoginRedirect)) />
  <CenteredLogo />
  <Panel
    accent={true}
    sectioned={true}
    title="panel tests"
  >
    <Error
      error="failed to login"
    />
    <Connect(ReduxForm)
      onSubmit={[MockFunction]}
      ssoEnabled={true}
    />
  </Panel>
</div>
`;

exports[`LoginPanel tests should show tfa form when user has tfa enabled 1`] = `
<div>
  <withRouter(Connect(LoginRedirect)) />
  <CenteredLogo />
  <Panel
    accent={true}
    sectioned={true}
    title="panel tests"
  >
    <Connect(ReduxForm) />
  </Panel>
</div>
`;
